<?xml version="1.0" encoding="utf-8"?>
<!-- <LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
</LinearLayout> -->

<RelativeLayout 
	android:layout_width="fill_parent" 
	xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_height="fill_parent" android:gravity="top">   
	
    <TextView 
		android:id="@+id/textViewLat" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"		
		android:text="@string/latitude" 
		android:layout_marginLeft="5dip" 
		android:layout_marginTop="10dip" 
		android:layout_marginBottom="5dip">
	</TextView>
	<EditText 		
		android:id="@+id/editTextLat" 
		android:width="300px"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent" 
		android:layout_below="@+id/textViewLat" 
		android:hint="@string/latitude_hint" android:text="@string/lat_example">
	</EditText>
	<TextView 
		android:id="@+id/textViewLong" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_below="@+id/editTextLat" 
		android:layout_marginLeft="5dip" 
		android:layout_marginTop="10dip" 
		android:layout_marginBottom="5dip" 
		android:text="@string/longitude">
	</TextView>
	<EditText 		
		android:id="@+id/editTextLong" 
		android:width="300px"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent" 
		android:layout_below="@+id/textViewLong" 
		android:hint="@string/longitude_hint" android:text="@string/lng_example">
	</EditText>
	<Button android:id="@+id/buttonshowme"
        	android:layout_height="wrap_content"  
        	android:text="@string/showme"
        	android:layout_toLeftOf="@+id/buttonclear"
        	android:layout_width="fill_parent" 
        	android:layout_marginTop="5dip"
        	android:layout_below="@+id/editTextLong">
    </Button>
    <Button android:id="@+id/buttonclear"
        	android:layout_height="wrap_content" 
        	android:layout_alignParentRight="true"
        	android:text="@string/clear"
        	android:width="160px" 
        	android:layout_width="wrap_content" 
        	android:layout_marginTop="5dip"
        	android:layout_below="@+id/editTextLong">
    </Button>
</RelativeLayout>
